Changed background color added text

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         	</hgroup>
         </header>
         <section>
+        	<h3>Navigation</h3>
         	<nav>
         		<ul>
         			<li><a href="index.html">HOME</a></li>
