--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-		<link rel="stylesheet" href="fs.css">
+		<link rel="stylesheet" href="css/fs.css">
        
        	<script src="js/vendor/modernizr-2.8.0.min.js"></script>
     </head>
@@ -40,18 +40,20 @@
         		</div>
        		</div>
        </nav>
-<div class="jumbotron text-center" style="background: url(img/test.png)">
+<div class="jumbotron text-center" style="background: url(img/test.png); height:700px; color: white;">
   <div class="container-fluid">
     <div class="row">
-      <div class="col-sm-12">
+      <div class="col-sm-12" style="padding-top:5%;">
         <h1>frontside smith design studio</h1>
         <p>Digital Design  &amp; Build.</p>
         <button class="btn btn-primary">Products &amp; Services</button>
       </div></div>
-  </div></div>
+  </div>
+</div>
+<section id="info">
 <div class="container-fluid">
-  <div class="row-fluid">
-    <div class="col-xs-3">
+  <div class="row">
+    <div  class="col-xs-3">
       <h3>
         Web
       </h3>
@@ -74,13 +76,15 @@
         Sound 
       </h3>
       <p>We have a growing sound library with many options to choose from for use in apps and software as well as film, television and much more.</p>
-    </div></div>
+    </div>
+    </div>
 </div>
-        <div class="footer">
+</section>
+        <div class="footer fixed-bottom">
         	<div class="container-fluid">
         		<div class="row">
         			<div class="col-xs-12">
-        				<p class="text-center">&copy; frontside smith 2014</p>
+        				<p class="text-center fixed-bottom">&copy; frontside smith 2014</p>
         			</div>
         		</div>
         	</div>
