--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 
         <!-- Add your site or application content here -->
         <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-  			<div class="container-fluid">
+  			<div class="container-fluid" style="background-color:#5a5a5a; margin: 0px;">
   					<div class="navbar-header">
-         				<a class="navbar-brand" href="#">frontside smith</a>	
+         				<a class="navbar-brand" href="#">Frontside Smith</a>	
         			</div>
         		<div class="nav">
     				<ul class="pull-right">
-    					<ul class="nav nav-pills">
+    					<ul class="nav nav-pills uppercase">
 		        			<li class="active"><a href="index.html">Home</a></li>
 		        			<li><a href="us.html">Us</a></li>
 		        			<li><a href="work.html">Work</a></li>
@@ -43,7 +43,7 @@
 <div class="jumbotron text-center" style="background: url(img/test.png); height:700px; color: white;">
   <div class="container-fluid">
     <div class="row">
-      <div class="col-sm-12" style="padding-top:5%;">
+      <div class="col-sm-12" style="padding-top:15%;">
         <h1>frontside smith design studio</h1>
         <p>Digital Design  &amp; Build.</p>
         <button class="btn btn-primary">Products &amp; Services</button>
