--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         		</div>
        		</div>
        </nav>
-<div class="jumbotron text-center" style="background: url(img/test.png); height:700px; color: white;">
+<div class="jumbotron text-center" style="background: url(img/desktopweb.png); height:700px; color: white;">
   <div class="container-fluid">
     <div class="row">
       <div class="col-sm-12" style="padding-top:15%;">
